Minor UI enhancement

--- a/FigLeaf.UI/MainWindow.xaml
+++ b/FigLeaf.UI/MainWindow.xaml
@@ -205,7 +205,7 @@
                          FontSize="8" Width="25" Grid.Column="1" Grid.Row="0" Panel.ZIndex="3" />
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1">
-                        <UI:QuestionTip VerticalAlignment="Center" Text="{x:Static CoreProperties:Resources.Ui_Security_PasswordRule_Tip}"/>
+                        <UI:QuestionTip VerticalAlignment="Center" Text="{x:Static CoreProperties:Resources.Ui_Security_PasswordRule_Tip}" Margin="-5,0"/>
                         <Label Content="{x:Static CoreProperties:Resources.Ui_Security_PasswordRule}" />
                     </StackPanel>
                     <ComboBox
